﻿版本特性：

AdView Android sdk 1.8.2 2012-11-16
1.更新百度广告平台至v3.0;
2.更新易传媒广告平台至v2.6.2;
3.更新多盟广告平台至v3.1.4;
4.更新安沃广告平台至v3.1;


AdView Android sdk 1.8.1 2012-11-06
1.更新airad广告平台至v1.3.3;
2.优化了一下应用互推的异常处理;
3.优化了一下下载模块的下载效率；
4.支持在大屏幕上显示vpon的大广告；

AdView Android sdk 1.8.0 2012-10-26
1.Aduu广告平台api调用方式的实现，开发者不需要单独加载Aduu的jar了; 
2.更新安沃广告平台至v3.0，manifest中不需要声明了;
3.更新微云广告平台至v4.0.0,需要把wiyun_res目录下的资源文件也放到项目中;
4.更新admob广告平台至v6.2.1;
5.更新易传媒广告平台至v2.6.1;
6.更新艾德思奇广告平台，版本号没变;
7.应用互推改进缓存机制以节省流量;
8.从1.8.0以后，必须在AndroidManifest.xml文件中声明com.adview.DownloadService，互推和内嵌广告下载的时候要用；

AdView Android sdk 1.7.9 2012-09-28
1.更新多盟广告平台至v3.1.0; 
2.更新有米广告平台至v3.08;
3.Inmobi广告平台api调用方式的实现，开发者不需要单独加载Inmobi的jar了；
4.优化了自定义平台的实现，可以参考sample中的实现；

AdView Android sdk 1.7.8 2012-09-14
1.更新哇棒广告平台至v2.3.0; 
2.更新力美广告平台至v2.2;
3.优化了Vpon广告展示；
4.支持随踪广告点击自动下载功能；(要在AndroidManifest.xml文件中声明com.adview.DownloadService)

AdView Android sdk 1.7.7 2012-08-30
1.更新友盟广告平台至v1.4.4;
2.更新百度广告平台至v2.1;
3.优化了一下广告展示；

AdView Android sdk 1.7.6 2012-08-10
1.更新亿动广告平台至v2.0.2;
2.更新易传媒广告平台至v2.5.2;
3.更新admob广告平台至v6.1.0;
4.更新MillennialMedia广告平台至v4.6.0;(需要更新AndroidManifest.xml配置)
5.更新Vpon广告平台至v3.2.5;
6.对随踪广告的请求做了一些优化；

AdView Android sdk 1.7.5 2012-07-27
1.更新airad广告平台至v1.3.2;
2.更新多盟广告平台至v3.0.3;
3.更新InMobi广告平台至v3.5.0;

AdView Android sdk 1.7.4 2012-07-17
1.更新aduu广告平台至v3.1.0;
2.更新Wooboo广告平台至v2.3.0;(需要更新AndroidManifest.xml配置)
3.修复了Adview应用互推在Android 4.0上显示的问题;
4.adview集成了随踪广告平台的实现，开发者不需要单独加载随踪的jar了;

AdView Android sdk 1.7.3 2012-06-19
1.更新百度广告平台至v2.1;

AdView Android sdk 1.7.2 2012-06-15
1.更新Momark广告平台至v1.2.0;
2.更新多盟广告平台至v3.0.2;
3.更新百度广告平台至v2.0;
4.对亿动广告平台的展示做了优化;

AdView Android sdk 1.7.1 2012-06-08
1.更新Admob广告平台至v6.0.1;
2.更新MillennialMedia广告平台至v4.5.1;
3.更新随踪广告平台至v1.21;
4.更新聚赢广告平台至v1.4;
5.adview应用互推支持全图片和GiF格式展示;

AdView Android sdk 1.7.0 2012-05-25
1.更新有米广告平台至v3.07;
2.更新多盟广告平台至v3.0.1;
3.易传媒平台在AndroidManifest.xml文件中更新了一下Activity的属性声明，添加一个透明属性；
4.针对开源项目，支持一个自定义平台，开发者可以根据自己的需要添加一个广告平台，详细情况参考"AdViewSDK_Android 安装指南.pdf"的"8 添加自定义广告平台";
