@@ -24,9 +24,9 @@ public class AdViewUtil {
 	// Don't change anything below this line
 	/***********************************************/ 
 	 
-	public static final int VERSION = 182;
+	public static final int VERSION = 183;
 
-	public static final String ADVIEW = "AdView SDK v1.8.2";
+	public static final String ADVIEW = "AdView SDK v1.8.3";
 	
 	// Could be an enum, but this gives us a slight performance improvement
 	//abroad
