@@ -1,11 +1,15 @@
 ﻿版本特性：
 
+AdView Android sdk 1.8.3 2012-11-20
+1.更新多盟广告的请求接口;
+
+
+
 AdView Android sdk 1.8.2 2012-11-16
 1.更新百度广告平台至v3.0;
 2.更新易传媒广告平台至v2.6.2;
 3.更新多盟广告平台至v3.1.4;
 4.更新安沃广告平台至v3.1;
-
 
 AdView Android sdk 1.8.1 2012-11-06
 1.更新airad广告平台至v1.3.3;
